--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Order/Order.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Order/Order.cshtml
@@ -95,6 +95,13 @@
             border: none; /* 移除按鈕邊框 */
             cursor: pointer; /* 讓鼠標顯示為手型 */
             }
+
+            .checkMarketBtn {
+            border-radius: 5px;
+            background-color: #b4793594;
+            color: white;
+            border: 2px #b4793594;
+            }
     </style>
 }
 
@@ -161,7 +168,7 @@
                                     <select id="sevenElevenStoreSelect">
                                         <option value="">請選擇一家7-11門市</option>
                                     </select>
-                                    <button type="button" class="btn btn-secondary mt-3 mb-3" id="submit-sevenEleven" data-bs-dismiss="modal">確定門市</button>
+                                    <button type="button" class="checkMarketBtn mt-3 mb-3" id="submit-sevenEleven" data-bs-dismiss="modal">確定門市</button>
                                 </div>
 
                                 <div id="sevenElevenMap" style="width: 100%; height: 400px;"></div>
@@ -188,7 +195,7 @@
                                     <select id="familyMartStoreSelect">
                                         <option value="">請選擇一家全家門市</option>
                                     </select>
-                                    <button type="button" class="btn btn-secondary mt-3 mb-3" id="submit-familyMart" data-bs-dismiss="modal">確定門市</button>
+                                    <button type="button" class="checkMarketBtn mt-3 mb-3" id="submit-familyMart" data-bs-dismiss="modal">確定門市</button>
                                 </div>
 
                                 <div id="familyMartMap" style="width: 100%; height: 400px;"></div>
@@ -403,6 +410,8 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+
+    <!--Google Map API-->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJm9PAx2tKFNLBmiWq6zV_Bz9OxWVB2Yk&libraries=places"></script>
 
     <script>
