新增: DEMO遊戲跨日按鈕(功能未寫入)

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -317,7 +317,10 @@
 
 <button type="submit" id="testDBlogin" style="display:none">測試資料庫登入</button>
 
-<button type="submit" id="testTask"  >測試進行任務</button>
+<button type="submit" id="testTask" style="width: 120px; padding: 10px 2px; background-color:#f0cf75; position: absolute;">
+    DEMO跨日重置
+</button>
+
 <div id="sidebar">
     <div id="sidebar-inside">
         <div class="toggle">
