--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/Mainstyle.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/Mainstyle.css
@@ -12,7 +12,7 @@
     border: 4px solid blanchedalmond;
     padding: 10px;
     margin-bottom: 10px;
-    color: aqua;
+    color: black;
     margin-top: 50px;
     border-radius: 15px;
     height: 400px;
@@ -256,7 +256,7 @@
 
     border-collapse: separate; 
     border-spacing: 0 10px;
-    width: 90%; 
+    width: 100%; 
 }
 
    
