※pay頁面 ●顯示商品明細 ●顯示總折扣、顯示運費、顯示最後價格

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
@@ -776,17 +776,17 @@
                     <div class="nav nav-tabs" id="nav-paymentMethod-tab" role="tablist">
                         <input class="nav-link active" id="nav-credit-tab" type="radio" name="paymentMethod"
                                data-bs-toggle="tab" data-bs-target="#nav-credit" role="tab" aria-controls="nav-credit"
-                               aria-selected="true" checked>
+                               aria-selected="true" value="信用卡付款" checked>
                         <label for="nav-credit-tab" class="mb-0">信用卡付款</label>
 
                         <input class="nav-link" id="nav-ATM-tab" type="radio" name="paymentMethod"
                                data-bs-toggle="tab" data-bs-target="#nav-ATM" role="tab" aria-controls="nav-ATM"
-                               aria-selected="false">
+                               aria-selected="false" value="銀行轉帳">
                         <label for="nav-ATM-tab" class="mb-0">銀行轉帳</label>
 
                         <input class="nav-link" id="nav-cashOnDelivery-tab" type="radio" name="paymentMethod"
                                data-bs-toggle="tab" data-bs-target="#nav-cashOnDelivery" role="tab"
-                               aria-controls="nav-cashOnDelivery" aria-selected="false">
+                               aria-controls="nav-cashOnDelivery" aria-selected="false" value="貨到付款">
                         <label for="nav-cashOnDelivery-tab" class="mb-0">貨到付款</label>
                     </div>
                 </nav>
